license update